--- a/install-sensible-pumps.cfg
+++ b/install-sensible-pumps.cfg
@@ -1,12 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleEngines]]
-{
-    MODULE
-    {
-        name = SensiblePumps
-    }
-}
-
-@PART[*]:HAS[@MODULE[ModuleEnginesFX]]
+@PART:HAS[@MODULE[ModuleEngines|ModuleEnginesFX]]:FOR[SensiblePumps]
 {
     MODULE
     {
