Or only works at the top level.

--- a/install-sensible-pumps.cfg
+++ b/install-sensible-pumps.cfg
@@ -1,4 +1,4 @@
-@PART:HAS[@MODULE[ModuleEngines|ModuleEnginesFX]]:FOR[SensiblePumps]
+@PART:HAS[@MODULE[ModuleEngines]|@MODULE[ModuleEnginesFX]]:FOR[SensiblePumps]
 {
     MODULE
     {
